# noether

noether/: CMakeLists.txt  package.xml
noether_conversions/: CMakeLists.txt
noether_edge_paths/: CMakeLists.txt  package.xml
noether_edge_paths/include/noether_edge_paths/: edge_paths.h
noether_edge_paths/src/: edge_paths.cpp
noether_examples/: CMakeLists.txt  package.xml
pcl_bspline_reconstruction/: CMakeLists.txt  package.xml
pcl_bspline_reconstruction/data/: bumper2.pcd  bumper2_small.3dm  bumper2_small.pcd
pcl_bspline_reconstruction/data/simulated/: back_door_hackathon.3dm  back_door_hackathon.pcd  back_door_hackathon.ply
pcl_bspline_reconstruction/include/pcl_bspline_reconstruction/: bspline_reconstruction.h  bspline_utils.h
pcl_bspline_reconstruction/src/: bspline_reconstruction.cpp  demo.cpp
robust_edge_extraction/: CMakeLists.txt  package.xml
robust_edge_extraction/include/robust_edge_extraction/: robust_edge_extraction.h
robust_edge_extraction/src/: demo.cpp  robust_edge_extraction.cpp
tool_path_planner/: CMakeLists.txt  package.xml
vtk_viewer/: CMakeLists.txt  package.xml
