<?xml version="1.0"?>
<package format="2">
  <name>noether_edge_paths</name>
  <version>0.0.0</version>
  <description>
    The noether_edge_paths package
  </description>
  <author email="david.merz@swri.org">David Merz, Jr.</author>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>actionlib</depend>
  <depend>mesh_segmenter</depend>
  <depend>noether_conversions</depend>
  <depend>noether_msgs</depend>
  <depend>path_sequence_planner</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>tool_path_planner</depend>
  <depend>vtk_viewer</depend>

</package>
